Agrego botones de editar y eliminar en Usuario

--- a/Usuario/src/app/componentes/header-usuario/header-usuario.component.html
+++ b/Usuario/src/app/componentes/header-usuario/header-usuario.component.html
@@ -21,6 +21,10 @@
         <p class="mb-0">Desarrollador Web</p>
         <p class="mb-0">Argentina</p>
       </div>
+      <div>
+        <button type="button" class="btn btn"><i class="bi bi-pencil-square iconos"></i></button>
+        <button type="button" class="btn btn"> <i class="bi bi-trash3 iconos"></i></button>
+      </div>
     </div>
 
     <div class="p-4 pt-0">
