--- a/Usuario/src/app/componentes/educacion-usuario/educacion-usuario.component.html
+++ b/Usuario/src/app/componentes/educacion-usuario/educacion-usuario.component.html
@@ -22,9 +22,9 @@
       </div>
     </div>
     <div>
-      <i class="bi bi-pencil-square iconos"></i>
-      <i class="bi bi-trash3 iconos"></i>
-    </div>
+      <button type="button" class="btn btn"><i class="bi bi-pencil-square iconos"></i></button>
+      <button type="button" class="btn btn"> <i class="bi bi-trash3 iconos"></i></button>
+     </div>
   </div>
 
   <!--Entrada-->
@@ -45,8 +45,8 @@
       </div>
     </div>
     <div>
-      <i class="bi bi-pencil-square iconos"></i>
-      <i class="bi bi-trash3 iconos"></i>
+      <button type="button" class="btn btn"><i class="bi bi-pencil-square iconos"></i></button>
+      <button type="button" class="btn btn"> <i class="bi bi-trash3 iconos"></i></button>
      </div>
   </div>
 
@@ -67,8 +67,8 @@
       </div>
     </div>
     <div>
-      <i class="bi bi-pencil-square iconos"></i>
-      <i class="bi bi-trash3 iconos"></i>
+      <button type="button" class="btn btn"><i class="bi bi-pencil-square iconos"></i></button>
+      <button type="button" class="btn btn"> <i class="bi bi-trash3 iconos"></i></button>
      </div>
   </div>
   <hr/>
