--- a/Usuario/src/app/componentes/experiencia-usuario/experiencia-usuario.component.html
+++ b/Usuario/src/app/componentes/experiencia-usuario/experiencia-usuario.component.html
@@ -3,9 +3,9 @@
   <div class="d-flex justify-content-between my-2" id="experience">
     <h3>Experiencia</h3>
     <div>
-      <i class="bi bi-pencil-square iconos"></i>
-      <i class="bi bi-trash3 iconos"></i>
-    </div>
+      <button type="button" class="btn btn"><i class="bi bi-pencil-square iconos"></i></button>
+      <button type="button" class="btn btn"> <i class="bi bi-trash3 iconos"></i></button>
+     </div>
   </div>
   <div>
     <p>
