--- a/Usuario/src/app/componentes/proyecto-usuario/proyecto-usuario.component.html
+++ b/Usuario/src/app/componentes/proyecto-usuario/proyecto-usuario.component.html
@@ -17,8 +17,8 @@
         </div>
       </div>
       <div>
-        <i class="bi bi-pencil-square iconos"></i>
-        <i class="bi bi-trash3 iconos"></i>
+        <button type="button" class="btn btn"><i class="bi bi-pencil-square iconos"></i></button>
+        <button type="button" class="btn btn"> <i class="bi bi-trash3 iconos"></i></button>
        </div>
     </div>
   
@@ -34,8 +34,8 @@
         </div>
       </div>
       <div>
-        <i class="bi bi-pencil-square iconos"></i>
-        <i class="bi bi-trash3 iconos"></i>
+        <button type="button" class="btn btn"><i class="bi bi-pencil-square iconos"></i></button>
+        <button type="button" class="btn btn"> <i class="bi bi-trash3 iconos"></i></button>
        </div>
     </div>
   </section>
