--- a/Usuario/src/app/componentes/skills-usuario/skills-usuario.component.html
+++ b/Usuario/src/app/componentes/skills-usuario/skills-usuario.component.html
@@ -3,8 +3,8 @@
     <div class="d-flex justify-content-between my-2" id="skills">
       <h3>Hard Skills & Soft Skills</h3>
       <div>
-        <i class="bi bi-pencil-square iconos"></i>
-        <i class="bi bi-trash3 iconos"></i>
+        <button type="button" class="btn btn"><i class="bi bi-pencil-square iconos"></i></button>
+        <button type="button" class="btn btn"> <i class="bi bi-trash3 iconos"></i></button>
        </div>
     </div>
     <p>HTML, CSS, JAVA, JavaScript, MySQL</p>
