Cambios en maquetado

--- a/PortafolioFede4/src/app/componentes/cabecera/cabecera.component.html
+++ b/PortafolioFede4/src/app/componentes/cabecera/cabecera.component.html
@@ -60,7 +60,7 @@
     </div>
 
     <!-- Login  -->
-  <form [formGroup]="loginForm" (ngSubmit)="onLogin(loginForm.value)">
+  <form>
       <div>
         <div class="dropdown">
           <button
