--- a/PortafolioFede4/src/app/componentes/cabecera/cabecera.component.html
+++ b/PortafolioFede4/src/app/componentes/cabecera/cabecera.component.html
@@ -3,15 +3,8 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark py-20 fixed-top">
   <div class="container-fluid">
     <a class="navbar-brand" href="#home">Argentina Programa - #YoProgramo</a>
-    <button
-      class="navbar-toggler"
-      type="button"
-      data-bs-toggle="collapse"
-      data-bs-target="#navbarColor02"
-      aria-controls="navbarColor02"
-      aria-expanded="false"
-      aria-label="Toggle navigation"
-    >
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor02"
+      aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
 
@@ -37,58 +30,39 @@
       </ul>
 
       <div class="redes face">
-        <a
-          href="https://github.com/NicklerFede?tab=repositories"
-          target="_blank"
-          ><i class="bi bi-github color-redes"></i
-        ></a>
+        <a href="https://github.com/NicklerFede?tab=repositories" target="_blank"><i
+            class="bi bi-github color-redes"></i></a>
       </div>
 
       <div class="redes insta">
-        <a href="https://www.instagram.com/fedenickler/" target="_blank"
-          ><i class="bi bi-instagram color-redes"></i
-        ></a>
+        <a href="https://www.instagram.com/fedenickler/" target="_blank"><i class="bi bi-instagram color-redes"></i></a>
       </div>
 
       <div class="redes lk">
-        <a
-          href="https://www.linkedin.com/in/federico-nickler-4522b31b7/"
-          target="_blank"
-          ><i class="bi bi-linkedin color-redes"></i
-        ></a>
+        <a href="https://www.linkedin.com/in/federico-nickler-4522b31b7/" target="_blank"><i
+            class="bi bi-linkedin color-redes"></i></a>
       </div>
     </div>
 
     <!-- Login  -->
-  <form>
+    <form [formGroup]="form" (ngSubmit)="onEnviar($event)">
       <div>
         <div class="dropdown">
-          <button
-            type="button"
-            class="btn dropdown-toggle"
-            data-bs-toggle="dropdown"
-          >
+          <button type="dropdown" class="btn dropdown-toggle" data-bs-toggle="dropdown">
             Iniciar Sesion
           </button>
           <ul class="dropdown-menu">
             <div class="ingreso">
               <span id="hideText">
                 <p class="text-ingreso">Usuario</p>
-                <input
-                  type="email"
-                  class="form-control usuario"
-                  id="user"
-                  placeholder="name@example.com"
-                  formControlName="usuario"
-                />
+                <input type="text" class="form-control usuario" id="username" placeholder="Username"
+                  formControlName="username" />
+                <div *ngIf="username?.errors && username?.touched">
+                  <p *ngIf="username?.hasError('required')" class="text-danger">El usuario es requerido</p>
+                </div>
                 <p class="text-ingreso">Contraseña</p>
-                <input
-                  type="password"
-                  class="form-control usuario"
-                  id="pass"
-                  placeholder="Password"
-                  formControlName="password"
-                />
+                <input type="password" class="form-control usuario" id="password" placeholder="Password"
+                  formControlName="password" />
               </span>
               <div class="boton">
                 <button type="submit" class="btn clr-btn">Ingresar</button>
